Simplify test setup and implement health check and security.
Removed unused test classes and improved RestAssured configurations. Added a health check controller, basic security services, and authorization handler implementations. Updated dependencies and configurations for test containers and MongoDB setup.

--- a/kotlin-testing/src/main/resources/application.yml
+++ b/kotlin-testing/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
       - "/webjars/**"
       - "/swagger/**"
       - "/health/**"
+      - "/health"
       - "/assets/**"
       - "/error/**"
       - "/csrf/**"
