Set up file server java/kotlin application with core functionality
This commit includes the initial setup for a Java-based file server using Gradle and Docker. It adds controllers for file management, authorization, and health checks, defines custom exceptions, and implements key services, properties, and models necessary for the application. Additionally, it provides a Docker Compose configuration, a Makefile for build operations, and example credentials for testing purposes.

--- a/java-vs-go/file-server-java/app/src/main/resources/application.yaml
+++ b/java-vs-go/file-server-java/app/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   main:
     web-application-type: servlet
   storage:
-    storage-path: ${ENV_STORAGE_PATH:${user.home}/.file-server/java/}
+    storage-path: ${ENV_STORAGE_PATH:${user.home}/file-server}
     authorization-path: ${ENV_AUTHORIZATION_PATH:classpath:/users.json}
 
   servlet:
