Add ENV_STORAGE_PATH to Dockerfiles and Make 'down' target
Added the `ENV_STORAGE_PATH` environment variable to both the `file-server-java` and `file-server-go` Dockerfiles for defining storage paths. Introduced a `down` Makefile target to streamline stopping local deployments across services.

--- a/java-vs-go/Makefile
+++ b/java-vs-go/Makefile
@@ -2,4 +2,8 @@ up:
 	@cd file-server-go && make local-deployment
 	@cd file-server-java && make local-deployment
 
+down:
+	@cd file-server-go && make local-down
+	@cd file-server-java && make local-down
+
 
