--- a/java-vs-go/file-server-java/Dockerfile
+++ b/java-vs-go/file-server-java/Dockerfile
@@ -22,6 +22,7 @@ ENV PORT $PORT
 ENV TZ America/Sao_Paulo
 
 ENV SPRING_PROFILES_ACTIVE $PROFILE
+ENV ENV_STORAGE_PATH /file-server
 
 EXPOSE $PORT
 
