Add Go benchmarking tool and improve file-server tests
Introduce a Go-based benchmarking tool to compare Java and Go servers. Improve the `overload-test` script with race-condition-safe counter updates using file locks, and enhance the Makefile with build and testing targets. This provides a more robust and efficient benchmarking setup.

--- a/java-vs-go/Makefile
+++ b/java-vs-go/Makefile
@@ -1,3 +1,4 @@
+counter = 50
 up:
 	@cd file-server-go && make local-deployment
 	@cd file-server-java && make local-deployment
@@ -6,4 +7,16 @@ down:
 	@cd file-server-go && make local-down
 	@cd file-server-java && make local-down
 
+build:
+	@go build -o bin/$(uname -m)/benchmark  benchmark.go
 
+test:
+	@./bin/$$(uname -m)/benchmark --count $(counter)
+
+test-fresh:
+	@make down
+	@make up
+	@echo "Waiting 15 seconds for containers get ready..."
+	@sleep 15
+	@docker ps | grep file-server
+	@./bin/$$(uname -m)/benchmark --count $(counter)
