Validate HTTP response status codes in benchmark
Added checks to validate the status codes for authorization and upload responses in benchmark.go. This ensures proper error handling and prevents further execution on failure. Also fixed syntax in the Makefile for building the benchmark binary.

--- a/java-vs-go/Makefile
+++ b/java-vs-go/Makefile
@@ -8,7 +8,7 @@ down:
 	@cd file-server-java && make local-down
 
 build:
-	@go build -o bin/$(uname -m)/benchmark  benchmark.go
+	@go build -o bin/$$(uname -m)/benchmark  benchmark.go
 
 test:
 	@./bin/$$(uname -m)/benchmark --count $(counter)
