Add sync/async support and makefile commands for testing
Introduced a `--sync` and `--async` flag to toggle parallel execution in the benchmark. Updated the Makefile with new testing commands (`test-sync` and `test-fresh-sync`) and added a `restart` target for restarting containers. Enhanced the README with minor adjustments for clarity.

--- a/java-vs-go/Makefile
+++ b/java-vs-go/Makefile
@@ -1,4 +1,9 @@
 counter = 50
+
+restart:
+	@docker restart file-server-java
+	@docker restart file-server-go
+
 up:
 	@cd file-server-go && make local-deployment
 	@cd file-server-java && make local-deployment
@@ -11,7 +16,10 @@ build:
 	@go build -o bin/$$(uname -m)/benchmark  benchmark.go
 
 test:
-	@./bin/$$(uname -m)/benchmark --count $(counter)
+	@./bin/$$(uname -m)/benchmark --count $(counter) --async
+
+test-sync:
+	@./bin/$$(uname -m)/benchmark --count $(counter) --sync
 
 test-fresh:
 	@make down
@@ -19,4 +27,13 @@ test-fresh:
 	@echo "Waiting 15 seconds for containers get ready..."
 	@sleep 15
 	@docker ps | grep file-server
-	@./bin/$$(uname -m)/benchmark --count $(counter)
+	@./bin/$$(uname -m)/benchmark --count $(counter) --async
+
+
+test-fresh-sync:
+	@make down
+	@make up
+	@echo "Waiting 15 seconds for containers get ready..."
+	@sleep 15
+	@docker ps | grep file-server
+	@./bin/$$(uname -m)/benchmark --count $(counter)  --sync
