Refactor handlers to use updated dependencies and APIs
Updated the project to adopt `goserve` for context and service handling, replacing the deprecated `http-utils`. Reworked handler methods to align with the new API structure, standardizing request and response handling. Upgraded dependencies and removed obsolete code for improved maintainability.

--- a/java-vs-go/file-server-go/Makefile
+++ b/java-vs-go/file-server-go/Makefile
@@ -5,4 +5,10 @@ local-deployment:
 local-down:
 	@docker-compose -p filer-server-go down
 
+config:
+	@go mod tidy
+	@oapi-codegen --config resources/config.yaml resources/openapi.yaml
 
+run:
+	@make config
+	@AUTHORIZATION_RESOURCE_PATH=./resources/users.json API_SECRET_AUTHORIZATION=fdotWXwes9ngUblnI9owMP2Z  go run ./cmd/server/main.go
