Refactor configuration and file handling logic
Revised environment variable handling by removing `API_SECRET_AUTHORIZATION`, introducing `API_SECRET_KEY`, and updating related code. Improved file handling by aligning request structure and simplifying service calls. Updated dependencies, optimized resource limits, and generalized project naming in Docker configurations.

--- a/java-vs-go/file-server-go/Dockerfile
+++ b/java-vs-go/file-server-go/Dockerfile
@@ -40,7 +40,7 @@ COPY --from=builder  app/resources/users.json /opt/resources/users.json
 COPY --from=builder  app/resources/openapi.yaml /opt/resources/openapi.yaml
 
 ENV ENV_STORAGE_PATH /file-server
-ENV API_SECRET_AUTHORIZATION fdotWXwes9ngUblnI9owMP2Z
+ENV API_SECRET_KEY fdotWXwes9ngUblnI9owMP2Z
 ENV AUTHORIZATION_RESOURCE_PATH /opt/resources/users.json
 ENV OPENAPI_RESOURCE_PATH /opt/resources/openapi.yaml
 ENV JWT_ISSUER file-server-go
