--- a/java-vs-go/file-server-go/docker-compose.yml
+++ b/java-vs-go/file-server-go/docker-compose.yml
@@ -1,26 +1,26 @@
 services:
-  file-server-go:
+  ${PROJECT}:
     build:
       dockerfile: Dockerfile
       context: .
       args:
         PORT: 8080
-    image: file-server-go
-    container_name: file-server-go
+    image: ${PROJECT}
+    container_name: ${PROJECT}
     restart: always
     deploy:
       resources:
         limits:
-          cpus: "2"
-          memory: "1g"
+          cpus: "1"
+          memory: "256M"
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://172.17.0.1:8081/api/file-server/v1/health" ]
+      test: [ "CMD", "curl", "-f", "http://172.17.0.1:8080/api/${PROJECT}/v1/health" ]
       interval: 30s
       timeout: 15s
       retries: 5
       start_period: 10s
     ports:
-      - "8081:8080"
+      - "8080:8080"
     volumes:
-      - ~/file-server/go:/file-server
-      - ~/file-server/go/logs:/.logs
+      - ~/${PROJECT}/go:/${PROJECT}
+      - ~/${PROJECT}/go/logs:/.logs
