feat: refactor import ordering, enhance JWT generation, and update dependencies
Standardized import ordering across multiple files for consistency. Improved JWT generation logic by passing user information to determine token duration. Added a `codegen` target to the Makefile and refined error handling in generated API code. Upgraded `goserve` and other dependencies, updated related configurations, and adjusted Docker project naming.

--- a/java-vs-go/file-server-go/Makefile
+++ b/java-vs-go/file-server-go/Makefile
@@ -13,5 +13,11 @@ run:
 	@make config
 	@JWT_ISSUER=file-server-go AUTHORIZATION_RESOURCE_PATH=./resources/users.json API_SECRET_AUTHORIZATION=fdotWXwes9ngUblnI9owMP2Z  go run ./cmd/server/main.go
 
+codegen:
+	 @mkdir -p ./gen/ || true
+	 @rm -rf ./gen/** || true
+	 @touch ./gen/api.gen.go
+	 @oapi-codegen --config ./resources/config.yaml ./resources/openapi.yaml
+
 logs:
 	@docker logs -f file-server-go
